# MelonLoader

./: .gitignore  .gitmodules  ANDROID.md  Cargo.toml  MelonLoader.sln  NOTICE.txt  README.md  build-debug.bat  fix.py
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml  nuget.yml
Dependencies/Il2CppAssemblyGenerator/: Core.cs  Il2CppAssemblyGenerator.csproj
Dependencies/MelonStartScreen/: MelonStartScreen.csproj
MelonLoader/: BootstrapInterop.cs  Core.cs  MelonLoader.csproj  MelonUtils.cs
MelonLoader.NativeHost/: HostExports.cs  MelonLoader.NativeHost.csproj  MelonLoaderInvoker.cs  NativeEntryPoint.cs  StereoHostingApi.cs
MelonLoader/Attributes/: MelonPlatformAttribute.cs  PatchShield.cs
MelonLoader/CompatibilityLayers/: MelonCompatibilityLayer.cs
MelonLoader/CoreClrUtils/: NativeStackWalk.cs
MelonLoader/Fixes/: DotnetAssemblyLoadContextFix.cs  DotnetLoadFromManagedFolderFix.cs  Il2CppICallInjector.cs  Il2CppInteropFixes.cs  InstancePatchFix.cs  ServerCertificateValidation.cs
Rust/Bootstrap/: Cargo.toml  build.bat
Rust/Bootstrap/src/: core.rs  core_android.rs  dotnet_trace.rs  lib.rs
Rust/Bootstrap/src/base_assembly/: dotnet.rs  mod.rs
Rust/Bootstrap/src/hooks/: mod.rs
Rust/Bootstrap/src/hooks/init_hook/: il2cpp.rs  mod.rs
Rust/Bootstrap/src/hooks/invoke_hook/: il2cpp.rs  mod.rs
Rust/Bootstrap/src/icalls/: mod.rs
Rust/Bootstrap/src/logging/: assert.rs  logger.rs
Rust/Bootstrap/src/melonenv/: paths.rs
Rust/Bootstrap/src/utils/: apk_asset_manager.rs  mod.rs  perm_requester.rs  runtime.rs
(+24 files in other folders)
